refactor: StaticResourceHandler에서 정적 리소스 처리만 담당하도록 수정